@@ -14661,4 +14661,10 @@ No match
     aab
  0: ab
 
+/(?(8000000000/
+Failed: error 161 at offset 13: number is too big
+
+/((?(R8000000000)))/
+Failed: error 161 at offset 16: number is too big
+
 # End of testinput2 
